# bigquery-mcp

./: Cargo.toml  README.md  Taskfile.yml
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  service.rs  sql.rs  types.rs  validation.rs
src/bigquery/: client.rs  mod.rs
src/mcp/: mod.rs
src/sql_rs/: columns.sql  datasets_descriptions.sql  jobs_recent.sql  jobs_stable_sample.sql  tables.sql
