[package]
name = "bigquery-mcp-rs"
version = "0.1.0"
edition = "2024"
description = "Rust MCP server for BigQuery"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
gcp_auth = "0.12.4"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
